--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index",
-    "dev": "nodemon src/index",
+    "dev": "nodemon src/index -e js,mjs,cjs,json,css,handlebars",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
@@ -14,6 +14,7 @@
   "dependencies": {
     "bad-words": "^3.0.4",
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2"
   }
