--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "engines": {
     "node": ">=18.16.0"
-},
+  },
   "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bad-words": "^3.0.4",
     "express": "^4.18.2",
+    "express-favicon": "^2.0.4",
     "express-handlebars": "^7.1.2",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2"
